# querydoctor

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  requirements.txt
action/: review_pr.py
backend/: billing.py  lint_engine.py  main.py
cli/: README.md  lint_engine.py  pyproject.toml  querydoctor_cli.py  sync_vendor.sh
docs/: CASE_STUDY.md
frontend/: app.js  index.html  manifest.webmanifest  style.css  sw.js
mcp_server/: requirements.txt  server.py
tests/: test_api.py  test_cli.py  test_compare.py
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/src/: checkSql.js  extension.js  formatResult.js
vscode-extension/test/: checkSql.test.js  extension.test.js  formatResult.test.js  vscode_stub.js
